@@ -1,3 +1,3 @@
-#stretch sid jessie trusty utopic vivid wily xenial#9
+#stretch sid jessie trusty vivid wily xenial#9
 #wheezy jessie#8
 #precise#7
