@@ -7,21 +7,22 @@ Build-Depends:
  bison,
  cmake (>= 2.8),
 #wily xenial# cmake (<< 3.3.2),
-#sid stretch jessie wheezy saucy trusty utopic vivid wily xenial# debhelper (>= 9),
+#sid stretch jessie wheezy saucy trusty vivid wily xenial# debhelper (>= 9),
 #sid stretch jessie trusty vivid wily xenial# dh-python,
 #precise# debhelper (>= 7),
  flex,
  grass-dev,
  libexpat1-dev,
  libfcgi-dev,
-#sid stretch jessie trusty utopic vivid wily xenial# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty vivid wily xenial# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
 #saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
  gdal-bin,
  python-gdal,
  libgeos-dev (>= 3.0.0),
- libgsl-dev | libgsl0-dev,
+#jessie wheezy saucy trusty vivid wily# libgsl0-dev,
+#sid stretch xenial# libgsl-dev,
  libpq-dev,
  libproj-dev,
  libqt4-dev (>= 4.7.0),
@@ -30,7 +31,7 @@ Build-Depends:
  libqca2-plugin-ossl,
  libqtwebkit-dev,
 #stretch jessie wheezy# libqwt-dev,
-#precise saucy trusty utopic vivid wily xenial sid# libqwt5-qt4-dev,
+#precise saucy trusty vivid wily xenial sid# libqwt5-qt4-dev,
  libspatialite-dev,
  libsqlite3-dev,
  libspatialindex-dev,
@@ -45,9 +46,9 @@ Build-Depends:
 #precise saucy# python-central (>= 0.5),
 #saucy wheezy# python-dev,
 #saucy# libpython2.7-dev,
-#sid stretch jessie trusty utopic vivid wily xenial# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
+#sid stretch jessie trusty vivid wily xenial# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
 #sid stretch jessie wily xenial# pyqt4.qsci-dev,
-#sid stretch jessie trusty utopic vivid wily xenial# python-pyspatialite,
+#sid stretch jessie trusty vivid wily xenial# python-pyspatialite,
 #sid wheezy jessie stretch trusty vivid wily xenial# python-nose2,
  python-sip (>= 4.5.0),
  python-sip-dev (>= 4.5.0),
@@ -66,9 +67,9 @@ Build-Depends:
 Build-Conflicts: libqgis-dev, qgis-dev
 #sid stretch jessie vivid wily xenial#Standards-Version: 3.9.6
 #wheezy#Standards-Version: 3.9.3
-#precise saucy trusty utopic#Standards-Version: 3.8.4
+#precise saucy trusty#Standards-Version: 3.8.4
 #sid stretch jessie#X-Python-Version: >= 2.7, << 2.8
-#wheezy precise saucy trusty utopic vivid wily xenial#XS-Python-Version: current
+#wheezy precise saucy trusty vivid wily xenial#XS-Python-Version: current
 Vcs-Browser: https://github.com/qgis/QGIS/
 Vcs-Git: https://github.com/qgis/QGIS.git
 Homepage: http://qgis.org/
@@ -241,12 +242,13 @@ Section: libdevel
 Depends:
  grass-dev,
  libexpat1-dev,
-#sid stretch jessie trusty utopic vivid wily xenial# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty vivid wily xenial# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
 #saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
  libgeos-dev (>= 3.0.0),
- libgsl-dev | libgsl0-dev,
+#jessie wheezy saucy trusty vivid wily# libgsl0-dev,
+#sid stretch xenial# libgsl-dev,
  libpq-dev,
  libproj-dev,
  libqgis-app{QGIS_ABI} (= ${binary:Version}),
@@ -383,7 +385,7 @@ Depends:
  python-tz,
  python-six,
  python-yaml,
-#sid stretch jessie trusty utopic vivid wily xenial# python-pyspatialite,
+#sid stretch jessie trusty vivid wily xenial# python-pyspatialite,
  libqgispython{QGIS_ABI},
  ${shlibs:Depends},
  ${python:Depends},
